# Agentic-AI

./: .gitignore  AutoGen.md  CrewAI.md  LangGraph.md  Prophet.ipynb  arena.faiss  setup_platform.bat
AIEngineering workflow toolkit/: .gitignore  AGENTS.md  README.md  RECORDING_SCRIPT.md  main.py  pyproject.toml
AIEngineering workflow toolkit/.claude/: settings.json  settings.local.json
AIEngineering workflow toolkit/.claude/hooks/: post_tool_use.py  pre_tool_use.py
AIEngineering workflow toolkit/api/: __init__.py  app.py  database.py
AIEngineering workflow toolkit/eval/: golden_dataset.json  harness.py  judge.py
AIEngineering workflow toolkit/mcp_server/: server.py
AIEngineering workflow toolkit/observability/: tracer.py
AIEngineering workflow toolkit/orchestrator/: agent.py
AIEngineering workflow toolkit/review_agent/: agent.py
AIEngineering workflow toolkit/skills/: loader.py  registry.json
AIEngineering workflow toolkit/skills/v1/: architecture_review.md  security_review.md  style_review.md
AIEngineering workflow toolkit/subagents/: architecture_agent.py  base.py  security_agent.py  style_agent.py
AIEngineering workflow toolkit/ui/: index.html  package-lock.json  package.json  tailwind.config.js
AIEngineering workflow toolkit/ui/src/: App.tsx  index.css  types.ts
AIEngineering workflow toolkit/ui/src/api/: client.ts
AIEngineering workflow toolkit/ui/src/components/: FindingCard.tsx  PipelineViz.tsx  Sidebar.tsx
AIEngineering workflow toolkit/ui/src/pages/: Dashboard.tsx  NewReview.tsx  ReviewDetail.tsx
VectorDatabases/: Dockerfile  README.md  arena.faiss  docker-compose.yml  requirements.txt  seed_arena.py  vector_search - Copy.py  vector_search.py
agent-observability/: .gitignore  README.md  docker-compose.yml
ai-native-data-platform/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  (+1 more)
vector-arena/: Dockerfile  README.md  docker-compose.yml  plot.py  pyproject.toml
vector-arena/arena/: bench.py
vector-arena/arena/engines/: __init__.py  base.py  chroma_engine.py  elasticsearch_engine.py  pinecone_engine.py  redis_engine.py  scann_engine.py  vespa_engine.py
vector-arena/artifacts/: pinecone_run.json  results.json  results.md
vector-arena/scripts/: plot_results.py
vector-arena/vector_arena.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vector-arena/vespa-app/: hosts.xml  services.xml
vector-arena/vespa-app/schemas/: vector_arena.sd
(+325 files in other folders)
